# B_2207

./: .gitignore  README.md  app.py  deploy.sh  minor_change.sh  next.config.js  package.json  pom.xml  pyproject.toml  requirements.txt
api/: firebase.ts
components/Art/: Canvas.tsx  Creator.tsx  FileSelector.tsx
components/Layout/: Default.tsx  Head.tsx  Header.tsx
config/: envloader.py  setting.py
hooks/: useAuthState.ts
lib/twoOpt/: TTSPMap.ts  TTour.ts  TTwoOpt.ts
lib/twoOptWithNL/: TNeighborList.ts  TTwoOptWithNL.ts
line-bot/: .gitignore  README.md  app.py  pyproject.toml
notebooks/get_color/clothes_to_square/.ipynb_checkpoints/: clothes_to_square-checkpoint.ipynb
notebooks/remove_background/: test.ipynb
pages/: _app.tsx  index.tsx
recommender/: searcher.py  utils.py
src/main/java/jp/ac/titech/onolab/aidiscovery/: AidiscoveryApplication.java
src/test/java/jp/ac/titech/onolab/aidiscovery/: AidiscoveryApplicationTests.java
styles/: globals.scss
styles/custom_bootstrap/: config.scss  index.scss
styles/custom_bootstrap/components/: index.scss  social_buttons.scss
weather/: featFromClothes.py  optClothesComb.py  weather.py  weatherAPI.py
